<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <co.edu.unal.tictactoe.BoardView
        android:id="@+id/board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="info"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/score_label_human"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/player_score_label"
            android:gravity="left"
            android:text="0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tie_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/player_score"
            android:layout_below="@+id/information"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/score_label_tie"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tie_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/tie_score_label"
            android:gravity="left"
            android:text="0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/computer_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/information"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:text="0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/computer_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/computer_score"
            android:gravity="right"
            android:text="@string/score_label_computer"
            android:textSize="20sp" />
    </RelativeLayout>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/action_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newGame_label"/>
        <Button
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_choose"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exitGame_label" />

    </TableRow>





</LinearLayout>